--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "social-icons": "^1.0.1",
     "sweetalert2": "^11.16.0",
     "web-vitals": "^4.2.4"
   },
